@@ -47,14 +47,14 @@ public:
     // generic implementation uses these ones for all of them, including the
     // standard ones.
 
-    virtual bool WXOnActivate(wxRect WXUNUSED(cell),
+    virtual bool WXOnActivate(const wxRect& WXUNUSED(cell),
                               wxDataViewModel *WXUNUSED(model),
                               const wxDataViewItem & WXUNUSED(item),
                               unsigned int WXUNUSED(col))
         { return false; }
 
-    virtual bool WXOnLeftClick(wxPoint WXUNUSED(cursor),
-                               wxRect WXUNUSED(cell),
+    virtual bool WXOnLeftClick(const wxPoint& WXUNUSED(cursor),
+                               const wxRect& WXUNUSED(cell),
                                wxDataViewModel *WXUNUSED(model),
                                const wxDataViewItem & WXUNUSED(item),
                                unsigned int WXUNUSED(col) )
